--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -17,8 +17,9 @@ ja:
         birthday: 誕生日
         email: メールアドレス
         administrator: 管理者
-        password: パスワード
-        password_confirmation: パスワードの確認
+        current_password: 現在のパスワード
+        password: 新しいパスワード
+        password_confirmation: 新しいパスワードの確認
       article:
         title: タイトル
         body: 本文
@@ -40,6 +41,7 @@ ja:
     errors:
       messages:
         invalid_member_name: 'は半角英数字で入力してください（_も使えます）。'
+        wrong: 'が間違っています。'
         expired_at_too_old: は掲載開始日より新しい日時にしてください。
         invalid_image_type: にはJPEG、PNG、GIF、PNG形式の画像を指定してください。
       models:
